src/objects/TXN__c.object
<CustomObject>
    <fields>
        <fullName>Account_Number_Last_4_Digits__c</fullName>
        <label>Account Number (Last 4 Digits)</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Type__c</fullName>
        <label>Account Type</label>
        <picklist>
            <picklistValues>
                <fullName>Checking</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Savings</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Adjustment_Reason__c</fullName>
        <label>Adjustment Reason</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Amount_Cleared__c</fullName>
        <formula>ABS(Amount__c) - Amount_Remaining__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Amount Cleared</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Amount_Remaining__c</fullName>
        <label>Amount Remaining</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Amount_Remaining_formatted__c</fullName>
        <formula>CASE(RecordType.Name,
&quot;Payment&quot;, (Amount_Remaining__c * -1),
&quot;Adjustment&quot;, (Amount_Remaining__c * -1),
&quot;Charge&quot;, Amount_Remaining__c, 
&quot;Dues&quot;, Amount_Remaining__c, 
&quot;Refund&quot;, Amount_Remaining__c, 
&quot;Taxes&quot;, Amount_Remaining__c,
&quot;Service Charges&quot;, Amount_Remaining__c,
&quot;Credit&quot;, (Amount_Remaining__c * -1),
&quot;Deposit&quot;, (Amount_Remaining__c * -1),
Amount_Remaining__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Amount Remaining (Formatted)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Bank_Name__c</fullName>
        <label>Bank Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bill_To_Member__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Bill To Member</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Transactions (Bill To Member)</relationshipLabel>
        <relationshipName>TransactionBillTo</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Card_Last_4_Digits__c</fullName>
        <label>Card Last 4 Digits</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Card_Type__c</fullName>
        <label>Card Type</label>
        <picklist>
            <picklistValues>
                <fullName>American Express</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Discover</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MasterCard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Visa</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Cardholder_Name__c</fullName>
        <label>Cardholder Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Charge_Amount_Left__c</fullName>
        <label>Charge Amount Left</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Charge_Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Charge Item</label>
        <referenceTo>Charge_Item__c</referenceTo>
        <relationshipLabel>Transactions</relationshipLabel>
        <relationshipName>Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Check_Date__c</fullName>
        <label>Check Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Check_Number__c</fullName>
        <label>Check Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CreditBookType__c</fullName>
        <inlineHelpText>Enter The Credit Book Type</inlineHelpText>
        <label>CreditBookType</label>
        <picklist>
            <picklistValues>
                <fullName>Pro Shop</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dining</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hotel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Others</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Credit_Financial_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Credit Financial Account</label>
        <referenceTo>Financial_Account__c</referenceTo>
        <relationshipLabel>Transactions (Credit Financial Account)</relationshipLabel>
        <relationshipName>Transactions2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Credit_Financial_Journal_Line__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Credit FJL</description>
        <label>Credit Financial Journal Line</label>
        <referenceTo>Financial_Journal_Line__c</referenceTo>
        <relationshipLabel>Credits</relationshipLabel>
        <relationshipName>Transactions1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Credit__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Credit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Current__c</fullName>
        <formula>IF( AND( Date__c  &lt;= Bill_To_Member__r.Last_Aging_Effective_Date__c,  Date__c  &gt;= (Bill_To_Member__r.Last_Aging_Effective_Date__c)-30) , true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Customer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Member or Guest the Transaction applies to</description>
        <label>Customer</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Transactions (Customer)</relationshipLabel>
        <relationshipName>Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DateT2__c</fullName>
        <label>DateT2</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DateTime__c</fullName>
        <formula>DATETIMEVALUE(TEXT(Date__c)+&apos; &apos;+MID(TEXT(CreatedDate-0.1666666666666 ),FIND(&apos; &apos;,TEXT(CreatedDate-0.1666666666666 ))+1,LEN(TEXT(CreatedDate-0.1666666666666 ))-(FIND(&apos; &apos;,TEXT(CreatedDate-0.1666666666666 ))+1)))+0.1666666666666</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Debit_Financial_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Debit Financial Account</label>
        <referenceTo>Financial_Account__c</referenceTo>
        <relationshipLabel>Transactions (Debit Financial Account)</relationshipLabel>
        <relationshipName>Transactions1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Default_A_R_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Default A/R Account</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Financial_Account__c.Active__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Financial_Account__c</referenceTo>
        <relationshipLabel>Transactions (Default A/R Account)</relationshipLabel>
        <relationshipName>Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Department__c</fullName>
        <globalPicklist>Department</globalPicklist>
        <label>Department</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Dues_Summary__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>used to relate unposted dues created before</description>
        <label>Dues Summary</label>
        <referenceTo>Dues_Summary__c</referenceTo>
        <relationshipLabel>Posted Dues</relationshipLabel>
        <relationshipName>Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Employee__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Employee</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.RecordType.DeveloperName</field>
                <operation>equals</operation>
                <value>Employee</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Employee Related Transactions</relationshipLabel>
        <relationshipName>Employees</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>External_Expiration_Date__c</fullName>
        <label>External Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>External_Payment_Authorization_Code__c</fullName>
        <label>External Payment Authorization Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_Payment_Method_Last_4_Digits__c</fullName>
        <label>External Payment Method Last 4 Digits</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_Payment_Method__c</fullName>
        <label>External Payment Method</label>
        <picklist>
            <picklistValues>
                <fullName>Visa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MasterCard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Discover</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>American Express</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ACH/echeck</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Check</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>External_Payment_Transaction_Code__c</fullName>
        <label>External Payment Transaction Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Financial_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Financial Account</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Financial_Account__c.Active__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Financial_Account__c</referenceTo>
        <relationshipLabel>Transactions (Financial Account)</relationshipLabel>
        <relationshipName>Transactions3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Financial_Journal_Entry__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>lookup to fje</description>
        <label>Financial Journal Entry</label>
        <referenceTo>Financial_Journal_Entry__c</referenceTo>
        <relationshipName>Transactions2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Financial_Journal_Line__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Financial Journal Line</label>
        <referenceTo>Financial_Journal_Line__c</referenceTo>
        <relationshipLabel>Debits</relationshipLabel>
        <relationshipName>Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GlobalSubType__c</fullName>
        <globalPicklist>SubType</globalPicklist>
        <label>SubType</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GlobalType__c</fullName>
        <globalPicklist>Type</globalPicklist>
        <label>Type</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Guest_Pass__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Guest Pass</label>
        <referenceTo>Guest_Pass__c</referenceTo>
        <relationshipLabel>Transactions</relationshipLabel>
        <relationshipName>Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Internal_Notes__c</fullName>
        <label>Internal Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Is_Parent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Parent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Item_Code__c</fullName>
        <label>Item Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Late_Fee_Does_Not_Apply__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Late Fee Does Not Apply</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Line_Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Line Item</label>
        <referenceTo>Line_Item__c</referenceTo>
        <relationshipLabel>Transactions</relationshipLabel>
        <relationshipName>Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Location</label>
        <referenceTo>Location__c</referenceTo>
        <relationshipName>Transactions1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Member_Dues__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>used to fill the due id in this</description>
        <label>Member Dues</label>
        <referenceTo>Member_Dues__c</referenceTo>
        <relationshipLabel>Transactions</relationshipLabel>
        <relationshipName>Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Member_Email__c</fullName>
        <label>Member Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Name_on_Account__c</fullName>
        <label>Name on Account</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_on_Check__c</fullName>
        <label>Name on Check</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>POS_Order_Id__c</fullName>
        <label>POS Order Id</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Type__c</fullName>
        <description>payment type of the payment</description>
        <globalPicklist>Payment_Type</globalPicklist>
        <inlineHelpText>payment type of the payment</inlineHelpText>
        <label>Payment Type</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Posted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Posted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Refund_Reason__c</fullName>
        <description>description of the refund of the payment</description>
        <label>Refund Reason</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Related_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related To</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>(1 AND 2) OR (3 AND 4) OR (5 AND 6 AND 7 AND 8)</booleanFilter>
            <filterItems>
                <field>$Source.RecordTypeId</field>
                <operation>equals</operation>
                <value>Refund</value>
            </filterItems>
            <filterItems>
                <field>TXN__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>Payment</value>
            </filterItems>
            <filterItems>
                <field>$Source.RecordTypeId</field>
                <operation>equals</operation>
                <value>Adjustment</value>
            </filterItems>
            <filterItems>
                <field>TXN__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>Charge, Dues, Taxes, Service Charges</value>
            </filterItems>
            <filterItems>
                <field>$Source.RecordTypeId</field>
                <operation>notEqual</operation>
                <value>Refund</value>
            </filterItems>
            <filterItems>
                <field>$Source.RecordTypeId</field>
                <operation>notEqual</operation>
                <value>Adjustment</value>
            </filterItems>
            <filterItems>
                <field>$Source.RecordTypeId</field>
                <operation>notEqual</operation>
                <value>Dues</value>
            </filterItems>
            <filterItems>
                <field>TXN__c.RecordTypeId</field>
                <operation>notEqual</operation>
                <value></value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>TXN__c</referenceTo>
        <relationshipLabel>Transactions</relationshipLabel>
        <relationshipName>Transactions2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Reservation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Event</label>
        <referenceTo>Event__c</referenceTo>
        <relationshipName>TXNs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Routing_Number__c</fullName>
        <label>Routing Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Server_Name__c</fullName>
        <label>Server Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Charge_Name__c</fullName>
        <description>name of the service charge applied</description>
        <inlineHelpText>name of the service charge applied</inlineHelpText>
        <label>Service Charge Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Charge__c</fullName>
        <description>service charge on this transaction</description>
        <inlineHelpText>service charge on this transaction</inlineHelpText>
        <label>Service Charge</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Settled__c</fullName>
        <formula>If (Amount_Remaining__c == 0, True, False)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Settled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Statement_Description__c</fullName>
        <label>Statement Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Statement__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>used to store the statement line id</description>
        <label>Statement</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Statements__c.RecordType.Name</field>
                <operation>equals</operation>
                <value>Statement Line</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Statements__c</referenceTo>
        <relationshipLabel>Transactions</relationshipLabel>
        <relationshipName>Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Denied</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fully Paid</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Queued</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Queued Retry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Refunded</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Requesting Approval</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unpaid</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Tax_Amount__c</fullName>
        <label>Tax Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Tax_Applied_On_Service_Charge__c</fullName>
        <defaultValue>false</defaultValue>
        <description>checked if the tax is applied on service charge</description>
        <label>Tax Applied On Service Charge</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Tax_Exempt__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Tax Exempt</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Tax_Name__c</fullName>
        <description>used to store name of the tax</description>
        <label>Tax Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Tax__c</fullName>
        <label>Tax</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>POS_Terminal__c</fullName>
        <description>POS Terminal</description>
        <inlineHelpText>POS Terminal</inlineHelpText>
        <label>POS Terminal</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ticket_Line__c</fullName>
        <description>ticket line number</description>
        <inlineHelpText>Ticket Line Number</inlineHelpText>
        <label>Ticket Line</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ticket_Number__c</fullName>
        <description>ticket number</description>
        <inlineHelpText>Ticket Number</inlineHelpText>
        <label>Ticket Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Amount__c</fullName>
        <formula>IF(
	(RecordType.Name==&apos;Charge&apos; || RecordType.Name==&apos;Adjustment&apos; || RecordType.Name==&apos;Dues&apos;),
	ROUND(Amount__c+Service_Charge__c+Tax__c,2),
	Amount__c
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Transaction_Split__c</fullName>
        <defaultValue>false</defaultValue>
        <description>if transection is split of charge item then this check box will be checked</description>
        <inlineHelpText>if transection is split of charge item then this check box will be checked</inlineHelpText>
        <label>Transaction Split</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Unit_Price__c</fullName>
        <formula>if(Quantity__c = 0,0,(Amount__c/Quantity__c))</formula>
        <label>Unit Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X120__c</fullName>
        <formula>IF( Date__c &lt;= (Bill_To_Member__r.Last_Aging_Effective_Date__c-121) , true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>120+</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>X31_60__c</fullName>
        <formula>IF( AND( Date__c &lt;= (Bill_To_Member__r.Last_Aging_Effective_Date__c-31), Date__c &gt;= (Bill_To_Member__r.Last_Aging_Effective_Date__c-60)) , true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>31-60</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>X61_90__c</fullName>
        <formula>IF( AND( Date__c &lt;= (Bill_To_Member__r.Last_Aging_Effective_Date__c-61), Date__c &gt;= (Bill_To_Member__r.Last_Aging_Effective_Date__c-90)) , true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>61-90</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>X91_120__c</fullName>
        <formula>IF( AND( Date__c &lt;= (Bill_To_Member__r.Last_Aging_Effective_Date__c-91), Date__c &gt;= (Bill_To_Member__r.Last_Aging_Effective_Date__c-120)) , true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>91-120</label>
        <type>Checkbox</type>
    </fields>
    <label>Transaction</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>TXN-{00000000}</displayFormat>
        <label>Transaction Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Transactions</pluralLabel>
    <recordTypes>
        <fullName>Adjustment</fullName>
        <active>true</active>
        <label>Adjustment</label>
    </recordTypes>
    <recordTypes>
        <fullName>Authorization</fullName>
        <active>true</active>
        <label>Authorization</label>
    </recordTypes>
    <recordTypes>
        <fullName>Charge</fullName>
        <active>true</active>
        <label>Charge</label>
    </recordTypes>
    <recordTypes>
        <fullName>Charge_Back</fullName>
        <active>true</active>
        <label>Charge Back</label>
    </recordTypes>
    <recordTypes>
        <fullName>Credit</fullName>
        <active>true</active>
        <description>club can add manual credit to the member&apos;s account so that credit amount will be added under this record type.</description>
        <label>Credit</label>
    </recordTypes>
    <recordTypes>
        <fullName>Deposit</fullName>
        <active>true</active>
        <label>Deposit</label>
    </recordTypes>
    <recordTypes>
        <fullName>Dues</fullName>
        <active>true</active>
        <label>Dues</label>
    </recordTypes>
    <recordTypes>
        <fullName>Member_Payment</fullName>
        <active>true</active>
        <label>Member Payment</label>
    </recordTypes>
    <recordTypes>
        <fullName>Payment</fullName>
        <active>true</active>
        <label>Payment</label>
    </recordTypes>
    <recordTypes>
        <fullName>Promotion_Discount</fullName>
        <active>true</active>
        <label>Promotion Discount</label>
    </recordTypes>
    <recordTypes>
        <fullName>Refund</fullName>
        <active>true</active>
        <label>Refund</label>
    </recordTypes>
    <recordTypes>
        <fullName>Service_Charge</fullName>
        <active>true</active>
        <label>Service Charge</label>
    </recordTypes>
    <recordTypes>
        <fullName>Service_Charges</fullName>
        <active>true</active>
        <description>Recordtype is used to store service charges</description>
        <label>Service Charges</label>
    </recordTypes>
    <recordTypes>
        <fullName>Tax</fullName>
        <active>true</active>
        <label>Tax</label>
    </recordTypes>
    <recordTypes>
        <fullName>Taxes</fullName>
        <active>true</active>
        <description>Used to store tax amounts</description>
        <label>Taxes</label>
    </recordTypes>
    <recordTypes>
        <fullName>Transfer</fullName>
        <active>true</active>
        <label>Transfer</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Account_Number_Numerics_Check</fullName>
        <active>true</active>
        <errorConditionFormula>IF(ISBLANK(Account_Number_Last_4_Digits__c) || ISNUMBER(Account_Number_Last_4_Digits__c),FALSE,TRUE)</errorConditionFormula>
        <errorMessage>Account number should be numeric</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Adjustment_Amount_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>RecordType.Name==&apos;Adjustment&apos; &amp;&amp; (ISBLANK(Amount__c) || Amount__c&gt;0)</errorConditionFormula>
        <errorMessage>Adjustments must be negative.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Adjustments_can_only_apply_to_Charges</fullName>
        <active>false</active>
        <errorConditionFormula>RecordType.Name == &apos;Adjustment&apos; &amp;&amp; Related_To__r.RecordType.Name != &apos;Charge&apos;</errorConditionFormula>
        <errorMessage>Sorry, an Adjustment can only be applied to a Charge.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Charge_Dues_Amount_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>(RecordType.Name==&apos;Charge&apos; || RecordType.Name==&apos;Dues&apos;) &amp;&amp; (ISBLANK(Amount__c) || Amount__c&lt;0)</errorConditionFormula>
        <errorMessage>Charges/Dues must be positive.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Credit_amount_validation</fullName>
        <active>true</active>
        <description>amount for credit should be in negative. so check if its negative or not.</description>
        <errorConditionFormula>RecordType.Name==&apos;Credit&apos; &amp;&amp; (ISBLANK(Amount__c) || Amount__c&gt;0)</errorConditionFormula>
        <errorMessage>Credit must be negative.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Payment_Amount_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>RecordType.Name==&apos;Payment&apos; &amp;&amp;
(ISBLANK(Amount__c) || Amount__c &gt; 0)</errorConditionFormula>
        <errorMessage>Payments must be negative.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Payment_Required</fullName>
        <active>true</active>
        <errorConditionFormula>OR( RecordType.Name = &apos;Refund&apos; &amp;&amp; ISBLANK( Related_To__c ), RecordType.Name = &apos;Adjustment&apos; &amp;&amp; ISBLANK( Related_To__c ) )</errorConditionFormula>
        <errorMessage>Related To field is required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Refund_Amount_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>RecordType.Name==&apos;Refund&apos; &amp;&amp; (ISBLANK(Amount__c) || Amount__c&lt;0)</errorConditionFormula>
        <errorMessage>Refund must be positive.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Required_Fields_on_ACH_Payments</fullName>
        <active>true</active>
        <errorConditionFormula>AND(ISPICKVAL(Payment_Type__c, &apos;ACH&apos;), RecordType.Name != &apos;Refund&apos;, OR(ISBLANK(Amount__c), ISBLANK(Date__c), ISBLANK(Statement_Description__c),ISBLANK(Account_Number_Last_4_Digits__c),ISBLANK(Routing_Number__c),ISBLANK(Name_on_Account__c),ISBLANK (Text(Account_Type__c))))</errorConditionFormula>
        <errorMessage>For ACH payments, Amount, Date, Statement Description, Account Number Last 4 Digits, Routing Number, Name on Account and Account Type are required.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Required_Fields_on_Cash_Payments</fullName>
        <active>true</active>
        <errorConditionFormula>AND(ISPICKVAL(Payment_Type__c, &apos;Cash&apos;), RecordType.Name != &apos;Refund&apos;, OR(ISBLANK(Amount__c), ISBLANK(Date__c), ISBLANK(Statement_Description__c)))</errorConditionFormula>
        <errorMessage>For cash payments, Amount, Date and Statement Description are required.</errorMessage>
    </validationRules>
</CustomObject>